[package]
name = "rustsam"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {version = "1.0", default-features = false}
defmt = "0.3.5"
futures = {version = "0.3.28", default-features = false}
hashbrown = "0.14"
micromath = "2.1.0"
once_cell = {version = "1.17.0", default-features = false, features=["alloc", "critical-section"]}
